# cloud-study

./: .gitignore  404.html  CLOUD_STUDY.md  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml  모집공고.md
.cursor/rules/: global_platform_integration.mdc
.github/workflows/: deploy-docs.yml
IMPLEMENTATION_PLAN/: index.html
common-skills/: index.html
common-skills/Ch1.Linux_운영/: index.html
common-skills/Ch2.Python_GO/: index.html
common-skills/Ch3.Cloud_Native/: index.html
common-skills/Ch4.DevOps/: index.html
common-skills/Ch5.시스템_설계/: index.html
computing-service/: index.html
computing-service-study/: index.html
computing-service/Ch1.OpenStack/: index.html
computing-service/Ch2.가상화_기술/: index.html
computing-service/Ch3.스케줄링/: index.html
computing-service/Ch4.Cloud_Native_컴퓨팅/: index.html
computing-service/Ch5.클라우드_인프라_설계/: index.html
computing-service/Ch6.Kubernetes_Operator/: index.html
computing-service/Ch7.Cloud_Network_CNI/: index.html
docs/: IMPLEMENTATION_PLAN.md  README.md  common-skills.md  computing-service-study.md  infrastructure-platform-study.md  networking-service-study.md
docs/common-skills/: Ch1.Linux_운영.md  Ch2.Python_GO.md  Ch3.Cloud_Native.md  Ch4.DevOps.md  Ch5.시스템_설계.md  README.md
docs/javascripts/: extra.js
iam-storage-service/: index.html
infrastructure-platform/: index.html
infrastructure-platform-study/: index.html
networking-service/: index.html
networking-service-study/: index.html
phase-1/: README.md  notes.md
scripts/: README.md
search/: search_index.json
terraform/: README.md
(+68 files in other folders)
